welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:30: error: value update is not a member of Boolean
			vuBiscuit() = true;
                        ^